Revision history for Test-FailWarnings

{{$NEXT}}

    [DOCUMENTED]

    - Fixed synopsis to match new failing test label

0.006     2013-08-22 10:41:11 America/New_York

    [CHANGED]

    - The label of the failing test has been revised for clarity

0.005     2013-05-03 14:03:28 America/New_York

    [DOCUMENTED]

    - Added Test::Warnings to See Also

0.004     2013-05-02 10:50:37 America/New_York

    [FIXED]

    - Bumped Capture::Tiny test prerequisite version

0.003     2013-03-13 13:30:24 America/New_York

    [FIXED]

    - Fixed @ALLOW_FROM initialization to suppress our own warning

0.002     2013-03-10 17:28:53 America/New_York

    [ADDED]

    - Now can optionally allow warnings from dependencies

    - Now can optionally allow warnings from specific modules

    [CHANGED]

    - warnings handler only installed by import(); handler function
      is now available for custom, localized use

0.001     2013-02-25 17:44:33 America/New_York

    - First release
